--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/portfolio.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
@@ -22,18 +22,18 @@
       <div class="container">
         <div class="site-nav">
           <a class="logotype" href="">
-            <span class="accent">Web</span>
-            <span class="logo">Studio</span>
+            <span class="accent-text">Web</span>
+            <span class="regular-text">Studio</span>
           </a>
           <nav>
             <ul class="main-navigation">
               <li class="nav1">
-                <a href="./index.html">Студия</a>
+                <a class="nav1-url" href="./index.html">Студия</a>
               </li>
               <li class="nav1">
                 <a class="link-current" href="./portfolio.html">Портфолио</a>
               </li>
-              <li class="nav1"><a href="">Контакты</a></li>
+              <li class="nav1"><a class="nav1-url" href="">Контакты</a></li>
             </ul>
           </nav>
           <ul class="mail">
