--- a/index.html
+++ b/index.html
@@ -343,8 +343,9 @@
       <div class="container">
         <div class="flex-footer">
           <div class="footer-element">
-            <a href="">
-              <span class="accent2">Web</span> <span class="logo2">Studio</span>
+            <a class="logotype2" href="">
+              <span class="accent-text">Web</span>
+              <span class="regular-text2">Studio</span>
             </a>
             <address>
               <p class="adress-footer">г. Киев, пр-т Леси Украинки, 26</p>
